--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhoneApp">
-        <activity android:name=".NewContactActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".ContactDetailActivity" />
+        <activity android:name=".NewContactActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
